hphp/test/zend/good/tests/lang/044.php.expectf
foo

Fatal error: Class undefined: B in %s/044.php on line 12
